unpackaged/main/default/objects/Doc_Formulas__c/Doc_Formulas__c.object-meta.xml
<CustomObject>
    <description>Document Formulas to be used on Conga documents</description>
    <label>Doc Formulas</label>
    <nameField>
        <label>Doc Formulas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Formulas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>