unpackaged/main/default/objects/Doc_Formulas__c/fields/Annual_Sales_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Last_Year__c</fullName>
    <description>Populate Annual Sales Last Year or 0</description>
    <formula>Opportunity_Name__r.Account.AnnualRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populate Annual Sales Last Year or 0</inlineHelpText>
    <label>Annual Sales Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>