unpackaged/main/default/objects/Doc_Formulas__c/fields/Bank_State__c.field-meta.xml
<CustomField>
    <fullName>Bank_State__c</fullName>
    <formula>if( ISBLANK( Opportunity_Name__r.Bank_State__c) = true, (" ") ,if( ISNULL(Opportunity_Name__r.Bank_State__c) =true,(" ") ,Opportunity_Name__r.Bank_State__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank State</label>
    <type>Text</type>
</CustomField>