unpackaged/main/default/objects/Doc_Formulas__c/fields/Co_Lessee_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Co_Lessee_Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Lessee Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Co-Lessee Contact ID</relationshipLabel>
    <relationshipName>Co_Lessee_Contact_ID</relationshipName>
    <type>Lookup</type>
</CustomField>