unpackaged/main/default/objects/Doc_Formulas__c/fields/Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Name__c</fullName>
    <description>Created by User Name</description>
    <formula>Opportunity_Name__r.CreatedBy.Username</formula>
    <inlineHelpText>Created by User Name</inlineHelpText>
    <label>Created By Name</label>
    <type>Text</type>
</CustomField>