unpackaged/main/default/objects/Doc_Formulas__c/fields/DBA__c.field-meta.xml
<CustomField>
    <fullName>DBA__c</fullName>
    <description>Populate NBA or Blank</description>
    <formula>If(ISBLANK( Opportunity_Name__r.Account.Company_DBA__c ) = True,(""),
If(ISNULL( Opportunity_Name__r.Account.Company_DBA__c ) = True,(""),
Opportunity_Name__r.Account.Company_DBA__c ))</formula>
    <inlineHelpText>Populate NBA or Blank</inlineHelpText>
    <label>DBA</label>
    <type>Text</type>
</CustomField>