unpackaged/main/default/objects/Doc_Formulas__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Populate Fax or Blank if not populated</description>
    <formula>Opportunity_Name__r.Account.Fax</formula>
    <inlineHelpText>Populate Fax or Blank if not populated</inlineHelpText>
    <label>Fax</label>
    <type>Text</type>
</CustomField>