unpackaged/main/default/objects/Doc_Formulas__c/fields/G2_Initial_Tag__c.field-meta.xml
<CustomField>
    <fullName>G2_Initial_Tag__c</fullName>
    <formula>IF(NOT(ISBLANK(Guarantor_2_Contact_ID__c)), '{{    $i3}}', '')</formula>
    <label>G2 Initial Tag</label>
    <type>Text</type>
</CustomField>