unpackaged/main/default/objects/Doc_Formulas__c/fields/G2_SSN_Is_Blank__c.field-meta.xml
<CustomField>
    <fullName>G2_SSN_Is_Blank__c</fullName>
    <formula>Guarantor_2_Contact_ID__r.SSN_Is_Blank__c</formula>
    <label>G2 SSN Is Blank</label>
    <type>Checkbox</type>
</CustomField>