unpackaged/main/default/objects/Doc_Formulas__c/fields/G3_Signature_Tag__c.field-meta.xml
<CustomField>
    <fullName>G3_Signature_Tag__c</fullName>
    <formula>IF(NOT(ISBLANK(Guarantor_3_Contact_ID__c)), '{{                     $s4}}', '')</formula>
    <label>G3 Signature Tag</label>
    <type>Text</type>
</CustomField>