unpackaged/main/default/objects/Doc_Formulas__c/fields/G3_SSN_Is_Blank__c.field-meta.xml
<CustomField>
    <fullName>G3_SSN_Is_Blank__c</fullName>
    <formula>Guarantor_3_Contact_ID__r.SSN_Is_Blank__c</formula>
    <label>G3 SSN Is Blank</label>
    <type>Checkbox</type>
</CustomField>