unpackaged/main/default/objects/Doc_Formulas__c/fields/G4_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>G4_Credit_Report__c</fullName>
    <formula>IF(!ISBLANK(Guarantor_4_Contact_ID__r.Current_Credit_Report_Link__c),HYPERLINK(Guarantor_4_Contact_ID__r.Current_Credit_Report_Link__c, 'View'),'')</formula>
    <label>G4 Credit Report</label>
    <type>Text</type>
</CustomField>