unpackaged/main/default/objects/Doc_Formulas__c/fields/G4_SSN__c.field-meta.xml
<CustomField>
    <fullName>G4_SSN__c</fullName>
    <formula>Guarantor_4_Contact_ID__r.SSN_Hidden__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>G4 SSN</label>
    <type>Text</type>
</CustomField>