unpackaged/main/default/objects/Doc_Formulas__c/fields/G4_SSN_Is_Blank__c.field-meta.xml
<CustomField>
    <fullName>G4_SSN_Is_Blank__c</fullName>
    <formula>Guarantor_4_Contact_ID__r.SSN_Is_Blank__c</formula>
    <label>G4 SSN Is Blank</label>
    <type>Checkbox</type>
</CustomField>