unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_2_City__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_2_City__c</fullName>
    <formula>Guarantor_2_Address_ID__r.City__c</formula>
    <label>Guarantor 2 City</label>
    <type>Text</type>
</CustomField>