unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_2_Email__c</fullName>
    <formula>Guarantor_2_Contact_ID__r.Email</formula>
    <label>Guarantor 2 Email</label>
    <type>Text</type>
</CustomField>