unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_2_First_Name__c</fullName>
    <formula>Guarantor_2_Contact_ID__r.FirstName</formula>
    <label>Guarantor 2 First Name</label>
    <type>Text</type>
</CustomField>