unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_2_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_2_Home_Phone__c</fullName>
    <formula>Guarantor_2_Contact_ID__r.HomePhone</formula>
    <label>Guarantor 2 Home Phone</label>
    <type>Text</type>
</CustomField>