unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_2_Primary__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_2_Primary__c</fullName>
    <formula>Guarantor_2_Contact_ID__r.Isprimary__c</formula>
    <label>Guarantor 2 Primary</label>
    <type>Checkbox</type>
</CustomField>