unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_2_SSN__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_2_SSN__c</fullName>
    <formula>Guarantor_2_Contact_ID__r.SSN__c</formula>
    <label>Guarantor 2 SSN</label>
    <type>Text</type>
</CustomField>