unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_2_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_2_Street_Address__c</fullName>
    <formula>Guarantor_2_Address_ID__r.Address__c</formula>
    <label>Guarantor 2 Street Address</label>
    <type>Text</type>
</CustomField>