unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_2_Title__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_2_Title__c</fullName>
    <formula>Guarantor_2_Contact_ID__r.Title</formula>
    <label>Guarantor 2 Title</label>
    <type>Text</type>
</CustomField>