unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_3_City__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_3_City__c</fullName>
    <formula>Guarantor_3_Address_ID__r.City__c</formula>
    <label>Guarantor 3 City</label>
    <type>Text</type>
</CustomField>