unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_3_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_3_First_Name__c</fullName>
    <formula>Guarantor_3_Contact_ID__r.FirstName</formula>
    <label>Guarantor 3 First Name</label>
    <type>Text</type>
</CustomField>