unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_3_SSN_Masked__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_3_SSN_Masked__c</fullName>
    <formula>Guarantor_3_Contact_ID__r.SSN_Masked__c</formula>
    <label>Guarantor 3 SSN Masked</label>
    <type>Text</type>
</CustomField>