unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_3_State__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_3_State__c</fullName>
    <formula>Guarantor_3_Address_ID__r.State__c</formula>
    <label>Guarantor 3 State</label>
    <type>Text</type>
</CustomField>