unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_4_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_4_Address_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guarantor 4 Address ID</label>
    <referenceTo>FPC_Address__c</referenceTo>
    <relationshipLabel>Guarantor 4 Address ID</relationshipLabel>
    <relationshipName>Guarantor_4_Address_ID</relationshipName>
    <type>Lookup</type>
</CustomField>