unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_4_City__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_4_City__c</fullName>
    <formula>Guarantor_4_Address_ID__r.City__c</formula>
    <label>Guarantor 4 City</label>
    <type>Text</type>
</CustomField>