unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_4_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_4_Date_of_Birth__c</fullName>
    <formula>Guarantor_4_Contact_ID__r.Birthdate</formula>
    <label>Guarantor 4 Date of Birth</label>
    <type>Date</type>
</CustomField>