unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_4_Primary__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_4_Primary__c</fullName>
    <formula>Guarantor_4_Contact_ID__r.Isprimary__c</formula>
    <label>Guarantor 4 Primary</label>
    <type>Checkbox</type>
</CustomField>