unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_4_SSN__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_4_SSN__c</fullName>
    <formula>Guarantor_4_Contact_ID__r.SSN__c</formula>
    <label>Guarantor 4 SSN</label>
    <type>Text</type>
</CustomField>