unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_4_Title__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_4_Title__c</fullName>
    <formula>Guarantor_4_Contact_ID__r.Title</formula>
    <label>Guarantor 4 Title</label>
    <type>Text</type>
</CustomField>