unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_4_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_4_Zip_Code__c</fullName>
    <formula>Guarantor_4_Address_ID__r.Zip_Code__c</formula>
    <label>Guarantor 4 Zip Code</label>
    <type>Text</type>
</CustomField>