unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_6_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_6_Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guarantor 6 Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Guarantor 6 Contact ID</relationshipLabel>
    <relationshipName>Guarantor_6_Contact_ID</relationshipName>
    <type>Lookup</type>
</CustomField>