unpackaged/main/default/objects/Doc_Formulas__c/fields/Guarantor_Contact_IDs__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Contact_IDs__c</fullName>
    <formula>Primary_Contact_ID__c   &amp; "|" &amp; Guarantor_2_Contact_ID__c  &amp; "|" &amp; Guarantor_3_Contact_ID__c  &amp; "|" &amp; Guarantor_4_Contact_ID__c  &amp; "|" &amp; Guarantor_5_Contact_ID__c  &amp; "|" &amp; Guarantor_6_Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guarantor Contact IDs</label>
    <type>Text</type>
</CustomField>