unpackaged/main/default/objects/Doc_Formulas__c/fields/Lease_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Lease_Deposit__c</fullName>
    <formula>Opportunity_Name__r.Deposit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>