unpackaged/main/default/objects/Doc_Formulas__c/fields/Lease_Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Lease_Monthly_Rent__c</fullName>
    <formula>Opportunity_Name__r.Docs_Monthly_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Monthly Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>