unpackaged/main/default/objects/Doc_Formulas__c/fields/Lease_Num_Advance_Payments__c.field-meta.xml
<CustomField>
    <fullName>Lease_Num_Advance_Payments__c</fullName>
    <formula>Opportunity_Name__r.Num_Advance_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Num Advance Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>