unpackaged/main/default/objects/Doc_Formulas__c/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>Legal Name if populated else Account Name</description>
    <formula>IF(
ISBLANK(Opportunity_Name__r.Account.Legal_Name__c),
Opportunity_Name__r.Account.Name,
Opportunity_Name__r.Account.Legal_Name__c
)</formula>
    <inlineHelpText>Legal Name if populated else Account Name</inlineHelpText>
    <label>Legal Name</label>
    <type>Text</type>
</CustomField>