unpackaged/main/default/objects/Doc_Formulas__c/fields/Legal_Stat_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Legal_Stat_Partnership__c</fullName>
    <description>Mark an X if Legal status is Partnership</description>
    <formula>if (Contains(Text( Opportunity_Name__r.Account.Legal_Status__c  ),"Limited Partnership") ,"",if (Contains(Text( Opportunity_Name__r.Account.Legal_Status__c  ),"Partnership") , "X" ," "))</formula>
    <inlineHelpText>Mark an X if Legal status is Partnership</inlineHelpText>
    <label>Legal Stat Partnership</label>
    <type>Text</type>
</CustomField>