unpackaged/main/default/objects/Doc_Formulas__c/fields/Mailing_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_2__c</fullName>
    <formula>Opportunity_Name__r.Addr_Mail1__r.Address_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address 2</label>
    <type>Text</type>
</CustomField>