unpackaged/main/default/objects/Doc_Formulas__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <formula>Opportunity_Name__r.Addr_Mail1__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing City</label>
    <type>Text</type>
</CustomField>