unpackaged/main/default/objects/Doc_Formulas__c/fields/Mailing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip__c</fullName>
    <formula>Opportunity_Name__r.Addr_Mail1__r.Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Zip</label>
    <type>Text</type>
</CustomField>