unpackaged/main/default/objects/Doc_Formulas__c/fields/Oppty_Owner_Fax__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Owner_Fax__c</fullName>
    <formula>IF( Opportunity_Name__r.OwnerId  =  $User.Id , $User.Fax,  "800-our-faxno" )</formula>
    <label>Oppty Owner Fax</label>
    <type>Text</type>
</CustomField>