unpackaged/main/default/objects/Doc_Formulas__c/fields/Owner_Credit_Card_Date__c.field-meta.xml
<CustomField>
    <fullName>Owner_Credit_Card_Date__c</fullName>
    <formula>Opportunity_Name__r.OWNER_CREDIT_CARD_DATE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Credit Card Date</label>
    <type>Text</type>
</CustomField>