unpackaged/main/default/objects/Doc_Formulas__c/fields/PG_State_In_CA__c.field-meta.xml
<CustomField>
    <fullName>PG_State_In_CA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by Flow. Used to determine if CCPA privacy policy acknowledgement should be sent.</description>
    <label>PG State In CA</label>
    <type>Checkbox</type>
</CustomField>