unpackaged/main/default/objects/Doc_Formulas__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Populate Phone or blank if not populated</description>
    <formula>Opportunity_Name__r.Account.Phone</formula>
    <inlineHelpText>Populate Phone or blank if not populated</inlineHelpText>
    <label>Phone</label>
    <type>Text</type>
</CustomField>