unpackaged/main/default/objects/Doc_Formulas__c/fields/Physical_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_1__c</fullName>
    <formula>Opportunity_Name__r.Addr_Bill1__r.Address_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Address 1</label>
    <type>Text</type>
</CustomField>