unpackaged/main/default/objects/Doc_Formulas__c/fields/Physical_City__c.field-meta.xml
<CustomField>
    <fullName>Physical_City__c</fullName>
    <formula>Opportunity_Name__r.Addr_Bill1__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical City</label>
    <type>Text</type>
</CustomField>