unpackaged/main/default/objects/Doc_Formulas__c/fields/Physical_State__c.field-meta.xml
<CustomField>
    <fullName>Physical_State__c</fullName>
    <formula>Opportunity_Name__r.Addr_Bill1__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical State</label>
    <type>Text</type>
</CustomField>