unpackaged/main/default/objects/Doc_Formulas__c/fields/Physical_Zip__c.field-meta.xml
<CustomField>
    <fullName>Physical_Zip__c</fullName>
    <formula>Opportunity_Name__r.Addr_Bill1__r.Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Zip</label>
    <type>Text</type>
</CustomField>