unpackaged/main/default/objects/Doc_Formulas__c/fields/Primary_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Cell_Phone__c</fullName>
    <label>Primary Cell Phone</label>
    <type>Phone</type>
</CustomField>