unpackaged/main/default/objects/Doc_Formulas__c/fields/Primary_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Primary Contact ID</relationshipLabel>
    <relationshipName>Primary_Contact_ID</relationshipName>
    <type>Lookup</type>
</CustomField>