unpackaged/main/default/objects/Doc_Formulas__c/fields/Retrieval_Rate__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Rate__c</fullName>
    <description>Populate Retrieval Rate or 0 if blank</description>
    <formula>if(ISBLANK( Opportunity_Name__r.Retrieval_Rate__c ) =true,"0",if( ISNULL( Opportunity_Name__r.Retrieval_Rate__c ) =true,"0", Opportunity_Name__r.Retrieval_Rate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populate Retrieval Rate or 0 if blank</inlineHelpText>
    <label>Retrieval Rate</label>
    <type>Text</type>
</CustomField>