unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Signor_Address_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signor Address ID</label>
    <referenceTo>FPC_Address__c</referenceTo>
    <relationshipLabel>Doc Formulas</relationshipLabel>
    <relationshipName>Doc_Formulas</relationshipName>
    <type>Lookup</type>
</CustomField>