unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Signor_Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signor Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Doc Formulas</relationshipLabel>
    <relationshipName>Doc_Formulas</relationshipName>
    <type>Lookup</type>
</CustomField>