unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>Signor_Credit_Report__c</fullName>
    <description>Old: Signor_Contact_ID__r.Latest_Report__c</description>
    <formula>IF(!ISBLANK(Signor_Contact_ID__r.Current_Credit_Report_Link__c),HYPERLINK(Signor_Contact_ID__r.Current_Credit_Report_Link__c, 'View'),'')</formula>
    <label>Signor Credit Report</label>
    <type>Text</type>
</CustomField>