unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Signor_Date_of_Birth__c</fullName>
    <formula>Signor_Contact_ID__r.Birthdate</formula>
    <label>Signor Date of Birth</label>
    <type>Date</type>
</CustomField>