unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Email__c.field-meta.xml
<CustomField>
    <fullName>Signor_Email__c</fullName>
    <formula>Signor_Contact_ID__r.Email</formula>
    <label>Signor Email</label>
    <type>Text</type>
</CustomField>