unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Signor_First_Name__c</fullName>
    <formula>Signor_Contact_ID__r.FirstName</formula>
    <label>Signor First Name</label>
    <type>Text</type>
</CustomField>