unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Signor_Full_Name__c</fullName>
    <formula>Signor_Contact_ID__r.Full_Name__c</formula>
    <label>Signor Full Name</label>
    <type>Text</type>
</CustomField>