unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Signor_Home_Phone__c</fullName>
    <formula>Signor_Contact_ID__r.HomePhone</formula>
    <label>Signor Home Phone</label>
    <type>Text</type>
</CustomField>