unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Initial_Tag__c.field-meta.xml
<CustomField>
    <fullName>Signor_Initial_Tag__c</fullName>
    <formula>IF(NOT(ISBLANK(Signor_Contact_ID__c)), '{{    $i2}}', '')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signor Initial Tag</label>
    <type>Text</type>
</CustomField>