unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Signor_Last_Name__c</fullName>
    <formula>Signor_Contact_ID__r.LastName</formula>
    <label>Signor Last Name</label>
    <type>Text</type>
</CustomField>