unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Signor_Mobile_Phone__c</fullName>
    <formula>Signor_Contact_ID__r.MobilePhone</formula>
    <label>Signor Mobile Phone</label>
    <type>Text</type>
</CustomField>