unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Signor_Ownership__c</fullName>
    <formula>Signor_Contact_ID__r.Ownership_Percentage__c</formula>
    <label>Signor Ownership %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>