unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Primary__c.field-meta.xml
<CustomField>
    <fullName>Signor_Primary__c</fullName>
    <formula>Signor_Contact_ID__r.Isprimary__c</formula>
    <label>Signor Primary</label>
    <type>Checkbox</type>
</CustomField>