unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Signature_Tag__c.field-meta.xml
<CustomField>
    <fullName>Signor_Signature_Tag__c</fullName>
    <formula>IF(NOT(ISBLANK(Signor_Contact_ID__c)), '{{                     $s2}}', '')</formula>
    <label>Signor Signature Tag</label>
    <type>Text</type>
</CustomField>