unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_SSN_Is_Blank__c.field-meta.xml
<CustomField>
    <fullName>Signor_SSN_Is_Blank__c</fullName>
    <formula>Signor_Contact_ID__r.SSN_Is_Blank__c</formula>
    <label>Signor SSN Is Blank</label>
    <type>Checkbox</type>
</CustomField>