unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_State__c.field-meta.xml
<CustomField>
    <fullName>Signor_State__c</fullName>
    <formula>Signor_Address_ID__r.State__c</formula>
    <label>Signor State</label>
    <type>Text</type>
</CustomField>