unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Signor_Street_Address__c</fullName>
    <formula>Signor_Address_ID__r.Address__c</formula>
    <label>Signor Street Address</label>
    <type>Text</type>
</CustomField>