unpackaged/main/default/objects/Doc_Formulas__c/fields/Signor_Title__c.field-meta.xml
<CustomField>
    <fullName>Signor_Title__c</fullName>
    <formula>Signor_Contact_ID__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signor Title</label>
    <type>Text</type>
</CustomField>