unpackaged/main/default/objects/Doc_Formulas__c/fields/State_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>State_of_Incorporation__c</fullName>
    <formula>TEXT(Opportunity_Name__r.Account.State_of_Incorporation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State of Incorporation</label>
    <type>Text</type>
</CustomField>