unpackaged/main/default/objects/Doc_Formulas__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Populate Webiste or Blank if not populated</description>
    <formula>if( ISNULL(Opportunity_Name__r.Account.Website ) = True, "           ",
if(ISBLANK(Opportunity_Name__r.Account.Website ) = True, "           ",
Opportunity_Name__r.Account.Website ))</formula>
    <inlineHelpText>Populate Webiste or Blank if not populated</inlineHelpText>
    <label>Website</label>
    <type>Text</type>
</CustomField>